Changed Link to onClick to push user to the correct path to fix spacing error

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -628,7 +628,3 @@ a:hover {
 .overlap {
   z-index: 1000;
 }
-
-.static-card-width{
-  width: 250px;
-}
